--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
 *.DOCX
+*.xise
+*.xrpt
+*.xpi
+*.xwbt
+*.bin
+*.xbcd
+*.ref
+*.html
+*.log
+*.ini
+*.xml
+*.xst
+*.prj
+*.ncd
+*.exe
+*.wdb
+*.mrp
+*.map
+*.ncd
+*.ngm
+*.csv
+*.jhd
+*.xmsgs
+*.ucf
+*.gise
+Xil*
+_ngo*
+_xmsgs*
+iseconfig*
+isim*
+xst*
+xlnx_auto_0_xdb*
+planAhead*
+*.cmd
+*.tcl
+*.bgn
+*.bit
+*.bld
+*.cmd_log
+*.drc
+*.drc
+*.ngr
+*.ngr
+*.pad
+*.ngc
+*.ngc
+*.pcf
+*.ptwx
+*.par
+*.lso
+*.ngd
+*.stx
+*.syr
+*.twr
+*.twx
+*.unroutes
+*.ut
+*.txt
+*.vf
+FinalProject/sch2HdlBatchFile
